--- a/style.css
+++ b/style.css
@@ -13,3 +13,21 @@ html {
 body {
     box-sizing: border-box;
 }
+.container {
+    margin: 50px auto;
+    width: 360px;
+    height: 740px;
+    border-radius: 30px;
+    background: #ee6352;
+    -webkit-box-shadow: 3px 6px 16px -4px rgba(0,0,0,0.63);
+    -moz-box-shadow: 3px 6px 16px -4px rgba(0,0,0,0.63);
+    box-shadow: 3px 6px 16px -4px rgba(0,0,0,0.63);
+    overflow: hidden;
+}
+.body {
+    width: 100%;
+    height: 100%;
+    margin-top: 60px;
+    border-radius: 50px;
+    background: white;   
+}
