--- a/style.css
+++ b/style.css
@@ -25,16 +25,24 @@ body {
     overflow: hidden;
     border-top: 1px solid transparent;
 }
+.top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 6px 20px;
+    color: white;
+}
 label {
     font-size: 26px;
-    color: white;
-    margin-left: 13px;
-    margin-top: 60px;
+   
+}
+.top i {
+    font-size: 26px;
 }
 .body {
     width: 100%;
-    height: 70%;
-    margin-top: 48px;
+    height: 68%;
+    margin-top: 40px;
     border-radius: 50px;
     background: white; 
     border-top: 1px solid transparent;  
@@ -43,7 +51,7 @@ img {
     width: 80%;
     height: auto;
     display: block;
-    margin: 80px auto 30px auto;
+    margin: 70px auto 30px auto;
 }
 .song-title {
     text-align: center;
