--- a/style.css
+++ b/style.css
@@ -45,13 +45,15 @@ label {
     margin-top: 40px;
     border-radius: 50px;
     background: white; 
-    border-top: 1px solid transparent;  
+    border-top: 1px solid transparent;
+    color: #1c1c1c;  
 }
 img {
     width: 80%;
     height: auto;
     display: block;
     margin: 70px auto 30px auto;
+    border-radius: 5px;
 }
 .song-title {
     text-align: center;
@@ -85,6 +87,18 @@ h4 {
     float: right;
     margin: 0 15px 0 0;
     font-size: 13px;
-    
+}
+.controls {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 30px;
+}
+.controls i {
+    font-size: 40px;
+    color: white;
+}
+.controls .far {
+    font-size: 60px;
 }
 
